@@ -227,6 +227,11 @@
 !define gpg4win_pkg_kdelibs_dev @gpg4win_pkg_kdelibs_dev@
 !define gpg4win_pkg_kdelibs_src @gpg4win_pkg_kdelibs_src@
 
+@HAVE_PKG_KLEOPATRA@
+!define gpg4win_pkg_kleopatra @gpg4win_pkg_kleopatra@
+!define gpg4win_pkg_kleopatra_version @gpg4win_pkg_kleopatra_version@
+!define gpg4win_pkg_kleopatra_src @gpg4win_pkg_kleopatra_src@
+
 # Internal packages.
 @HAVE_PKG_MAN_NOVICE_DE@
 
