@@ -63,6 +63,7 @@ EXTRA_DIST = pkg-config gpg4win.nsi gpg4win-src.nsi config.site \
         inst-kdesupport.nsi   	   uninst-kdesupport.nsi      \
         inst-oxygen-icons.nsi  	   uninst-oxygen-icons.nsi    \
         inst-kdelibs.nsi  	   uninst-kdelibs.nsi         \
+        inst-kleopatra.nsi  	   uninst-kleopatra.nsi       \
 	inst-bzip2.nsi             uninst-bzip2.nsi
 
 # Need to clean the dll because we bypassed automake.
@@ -218,7 +219,8 @@ gpg4win_pkg_bzip2_make_args_inst = \
 
 # Supported binary packages.
 gpg4win_bpkgs = libiconv gettext pkgconfig zlib libpng jpeg pango cairo \
-	        atk gtk+ gpgee crypt regex qt kdesupport oxygen-icons kdelibs
+	        atk gtk+ gpgee crypt regex qt kdesupport oxygen-icons kdelibs \
+		kleopatra
 
 # libiconv needs some special magic to generate a usable import
 # library.
